# AVL-Tree

./: .gitignore  CMakeLists.txt  Makefile  README.md  dockerfile  exe  readme.md
doc/: avl_node_add.txt
include/: functions.h
src/: functions.cpp
test/: avl_create.cpp  avl_functions_tests.cpp  avl_node_add_test.cpp  main.cpp
